tests/neg-custom-args/captures/i15772.check
-- Error: tests/neg-custom-args/captures/i15772.scala:21:26 ------------------------------------------------------------
21 |    val c : C^{x} = new C(x)  // error
   |                          ^
   |                          reference (x : C^) is not included in the allowed capture set {}
   |                          of an enclosing function literal with expected type () -> Int
-- Error: tests/neg-custom-args/captures/i15772.scala:22:46 ------------------------------------------------------------
22 |    val boxed1 : ((C^) => Unit) -> Unit = box1(c)  // error
   |                                          ^^^^^^^
   |C^ => Unit cannot be box-converted to box C{val arg: C^}^{c} ->{cap, c} Unit
   |since the additional capture set {c} resulting from box conversion is not allowed in box C{val arg: C^}^{c} => Unit
-- Error: tests/neg-custom-args/captures/i15772.scala:28:26 ------------------------------------------------------------
28 |    val c : C^{x} = new C(x) // error
   |                          ^
   |                          reference (x : C^) is not included in the allowed capture set {}
   |                          of an enclosing function literal with expected type () -> Int
-- Error: tests/neg-custom-args/captures/i15772.scala:29:35 ------------------------------------------------------------
29 |    val boxed2 : Observe[C^] = box2(c)  // error
   |                               ^^^^^^^
   |C^ => Unit cannot be box-converted to box C{val arg: C^}^{c} ->{cap, c} Unit
   |since the additional capture set {c} resulting from box conversion is not allowed in box C{val arg: C^}^{c} => Unit
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15772.scala:35:34 ---------------------------------------
35 |  val boxed2 : Observe[C]^ = box2(c) // error
   |                                  ^
   |                                  Found:    box C^
   |                                  Required: box C{val arg: C^?}^?
   |
   |                                  Note that the universal capability `cap`
   |                                  cannot be included in capture set ?
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15772.scala:46:2 ----------------------------------------
46 |  x: (() -> Unit) // error
   |  ^
   |  Found:    (x : () ->{filesList, sayHello} Unit)
   |  Required: () -> Unit
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i15772.scala:34:10 ------------------------------------------------------------
34 |  def c : C^ = new C(x) // error separation
   |          ^^
   |          Separation failure: method c's result type C^ hides non-local parameter x
